[package]
name = "yellowstone-vixen-core"
description = "Core types for Vixen"
# authors = ["TODO"]
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/rpcpool/yellowstone-vixen"

[dependencies]
bs58 = "0.5.1"
regex = "1.0"
thiserror = "1.0.64"
yellowstone-grpc-proto = { workspace = true }
yellowstone-vixen-proto = { workspace = true, optional = true }

[dev-dependencies]
yellowstone-vixen-mock = { workspace = true }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[features]
proto = ["dep:yellowstone-vixen-proto"]
